--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: "Blog of Engine Beast : Alpha"
+title: "Engine Beast : Alpha"
 description: "Taking apart an RC car"
 theme: jekyll-theme-cayman
